# LiarsDice

./: .gitignore  LICENSE  LiarsDice.cabal  Readme.md  flake.nix
.github/workflows/: release.yml
Bots/: run.sh  simple.js
Src/: Interface.hs  Main.hs  Simulation.hs
